[package]
name = "twamp-rs"
version = "0.1.0"
authors = ["Shehriyar Qureshi <thatdevsherry@gmail.com>"]
edition = "2024"
description = "Implementation of TWAMP (RFC 5357)"
license-file = "LICENSE.txt"
readme = "README.md"
repository = "https://github.com/thatdevsherry/twamp-rs"
categories = ["network-programming"]
keywords = ["twamp", "rfc", "5357", "network", "analysis"]

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1.0.81"
tracing = "0.1.40"
tracing-subscriber = "0.3"
deku = "0.20"
num_enum = "0.7.5"
rand = "0.9.2"

[[example]]
name = "controller"
path = "examples/controller/main.rs"

[[example]]
name = "responder"
path = "examples/responder/main.rs"
