[package]
name = "control-client"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twamp-control = { path = "../twamp-control" }
session-sender = { path = "../session-sender" }
timestamp = { path = "../timestamp" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.81"
tracing = "0.1.40"
deku = { workspace = true }
