[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twamp-control = { path = "../twamp-control" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
bincode = "1.3.3"
anyhow = "1.0.81"
