[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twamp-control = { path = "../twamp-control" }
session-reflector = { path = "../../crates/session-reflector" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
anyhow = "1.0.81"
deku = { workspace = true }
