[package]
name = "session-reflector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.40"
twamp-test = { path = "../twamp-test" }
twamp-control = { path = "../twamp-control" }
deku = { workspace = true }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.81"
