[package]
name = "session-sender"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twamp-test = { path = "../twamp-test" }
timestamp = { path = "../timestamp" }
twamp-control = { path = "../twamp-control" }
deku = { workspace = true }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
anyhow = "1.0.81"
clap = { version = "4.5.4", features = ["derive"] }
