[package]
name = "twamp-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bincode = "1.3.3"
bytes = "1.6.0"
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
serde-big-array = "0.5.1"
num_enum = "0.7.2"
