[package]
name = "twamp-control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.6.0"
rand = "0.8.5"
tracing = "0.1.40"
num_enum = "0.7.2"
deku = { workspace = true }
