[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
control-client = { path = "../../crates/control-client" }
twamp-control = { path = "../../crates/twamp-control" }
timestamp = { path = "../../crates/timestamp" }
twamp-test = { path = "../../crates/twamp-test" }
session-sender = { path = "../../crates/session-sender" }
anyhow = "1.0.81"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
